--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 :root {
   --font: Palatino;
+  --font-mono: ui-monospace, Menlo, Consolas;
   --bg-color: #f5f5f5;
   --high-color: #b916ff;
   --link-color: #ff7c27;
@@ -28,7 +29,7 @@ header img {
 
 body {
   font-family: var(--font);
-  font-size: .85rem;
+  font-size: .8rem;
   line-height: 1.25rem;
   max-width: 85ch;
   padding: 0 1rem;
