--- a/css/index.css
+++ b/css/index.css
@@ -2,8 +2,8 @@
   --font: Palatino;
   --font-mono: ui-monospace, Menlo, Consolas;
   --bg-color: #f5f5f5;
-  --high-color: #b916ff;
-  --link-color: #ff7c27;
+  --high-color: #ff7c27;
+  --link-color: #1982c4;
   --text-color: #000000;
   --delimiter: "|";
 }
